added ClientFX.jar, updated readme.md